Fix: silenciar TS warnings en emails.astro

--- a/caja3/src/pages/admin/emails.astro
+++ b/caja3/src/pages/admin/emails.astro
@@ -222,6 +222,7 @@
     </div>
 
     <script>
+        // @ts-nocheck
         let currentUserId = null;
         let users = [];
         let currentPaymentData = null;
